# agent-context-builder-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: system_prompt.rs
src/: lib.rs
tests/: integration.rs
