[package]
name = "agent-context-builder"
version = "0.1.0"
edition = "2021"
description = "Compose LLM system prompts from named sections with ordering and conditionals"
license = "MIT"
repository = "https://github.com/MukundaKatta/agent-context-builder-rs"
keywords = ["llm", "agent", "prompt", "system", "context"]
categories = ["text-processing"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
